panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__functions__test_fallthrough_return_from_noreturn_function.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/functions/test_fallthrough_return_from_noreturn_function.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/functions/test_fallthrough_return_from_noreturn_function.c"
   (function-definition external stack-size=8
      (f~0 `fn() -> void` (static f))
      (compound-statement))
   (function-definition external stack-size=24
      (main~1 `fn() -> int` (static main))
      (compound-statement
         (expression
            (call `void` @void
               (addressof `ptr<fn() -> void>` @0
                  (f~0 `fn() -> void` (static f))))))))

----- stderr -----
