panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__functions__test_static_inline_function.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/functions/test_static_inline_function.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/functions/test_static_inline_function.c"
   (definition internal (x~0 `int` (static x)) (42 `int`))
   (function-definition internal stack-size=8
      (f~1 `fn() -> int` (static f))
      (compound-statement
         (return (x~0 `int` (static x)))))
   (function-definition external stack-size=24
      (main~3 `fn() -> int` (static main))
      (compound-statement
         (return
            (call `int` @0
               (addressof `ptr<fn() -> int>` @8
                  (f~1 `fn() -> int` (static f))))))))

----- stderr -----
