panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__functions__test_unnamed_void_in_parameter_list.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/functions/test_unnamed_void_in_parameter_list.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/functions/test_unnamed_void_in_parameter_list.c"
   (declaration external (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)) ∅)
   (typedef T `void`)
   (tentative-definition external (p~1 `ptr<void const>` (static p)) ∅)
   (declaration external (v~2 `fn() -> void` (static v)) ∅)
   (function-definition external stack-size=24
      (f~3 `fn() -> int` (static f))
      (compound-statement
         (return (123 `int` @0))))
   (function-definition external stack-size=24
      (g~6 `fn() -> int` (static g))
      (compound-statement
         (return (42 `int` @0))))
   (function-definition external stack-size=24
      (h~9 `fn() -> int` (static h))
      (compound-statement
         (return (27 `int` @0))))
   (function-definition external stack-size=56
      (main~12 `fn() -> int` (static main))
      (compound-statement
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 4>>` @16
                        (string `array<char; 4>` @void "%d\n\0"))))
               (call `int` @24
                  (addressof `ptr<fn() -> int>` @32
                     (f~3 `fn() -> int` (static f))))))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 4>>` @16
                        (string `array<char; 4>` @void "%d\n\0"))))
               (call `int` @24
                  (addressof `ptr<fn() -> int>` @32
                     (g~6 `fn() -> int` (static g))))))
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 4>>` @16
                        (string `array<char; 4>` @void "%d\n\0"))))
               (call `int` @24
                  (addressof `ptr<fn() -> int>` @32
                     (h~9 `fn() -> int` (static h)))))))))

----- stderr -----
